--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-jinja2==3.0.1
-pyyaml==5.4.1
+jinja2
+pyyaml
 opencv-python~=4.5.5.64
-PyQt5==5.15.6
-numpy==1.21.5
-superqt==0.3.1
-colorama==0.4.4
-pandas==1.3.5
-plotly==5.6.0
-tables==3.7.0
+PyQt5
+numpy
+superqt
+colorama
+pandas
+plotly
+tables
