--- a/y2023/Preseason/BUILD.bazel
+++ b/y2023/Preseason/BUILD.bazel
@@ -1,10 +1,10 @@
 load("//build_scripts/bazel:java_rules.bzl", "gos_java_robot")
 
 gos_java_robot(
-    name = "Preseason",
+    name = "Preseason2023",
     srcs = glob(["src/main/java/**/*.java"]),
     disable_checkstyle = True,
-    main_class = "frc.robot.Main",
+    main_class = "com.gos.preseason2023.Main",
     deps = [
         "@bazelrio//libraries/java/ctre/phoenix",
         "@bazelrio//libraries/java/wpilib/hal",
