hotfix: re-added basic_simulator to settings.gradle

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,6 @@
 rootProject.name = 'GirlsOfSteelRobotics'
 
-//include 'codelabs:basic_simulator'
+include 'codelabs:basic_simulator'
 //include 'codelabs:custom_shuffleboard'
 include 'codelabs:gitflow'
 //include 'codelabs:pid'
