--- a/.github/workflows/update_checker.yml
+++ b/.github/workflows/update_checker.yml
@@ -26,7 +26,9 @@ jobs:
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
+        if: always()
         with:
           base: main
           title: Update Robot Libraries
           branch: update_robot_deps
+
