--- a/y2023/Preseason/BUILD.bazel
+++ b/y2023/Preseason/BUILD.bazel
@@ -8,5 +8,7 @@ gos_java_robot(
     deps = [
         "@bazelrio//libraries/java/wpilib/new_commands",
         "@bazelrio//libraries/java/wpilib/wpilibj",
+        "@bazelrio//libraries/java/rev/revlib",
+        "@snobot_sim//jar",
     ],
 )
