--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 
 plugins {
-    id 'com.diffplug.spotless' version '5.5.0' apply false
-    id 'com.github.spotbugs' version '5.0.0-beta.1' apply false
+    id 'com.diffplug.spotless' version '6.4.2' apply false
+    id 'com.github.spotbugs' version '5.0.8' apply false
 }
 
 allprojects {
