--- a/.github/workflows/update_checker.yml
+++ b/.github/workflows/update_checker.yml
@@ -13,6 +13,11 @@ jobs:
 
       - uses: actions/checkout@v2
 
+      - name: Set up Java
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.11
+
       - name: Setup git
         run: |
           git config --global user.email "update_runner@example.com"
