This seems to work?

--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,16 @@ plugins {
     id 'com.github.spotbugs' version '5.0.8' apply false
 }
 
-allprojects {
+subprojects {
+    // TODO(pj) surely there is a better way
+    var ignored_subprojects = ["codelabs", "libraries", "old_robots"]
+    for(int year = 2011; year < 3000; ++year) {
+        ignored_subprojects.add("y" + year)
+    }
+    if (ignored_subprojects.contains(name)) {
+        return
+    }
+
     apply from: "${rootDir}/styleguide/styleguide.gradle"
 }
 
