--- a/old_robots/y2015/GoS2015/src/main/java/com/gos/recycle_rush/robot/subsystems/BUILD.bazel
+++ b/old_robots/y2015/GoS2015/src/main/java/com/gos/recycle_rush/robot/subsystems/BUILD.bazel
@@ -10,6 +10,7 @@ gos_java_library(
         "@bazelrio//libraries/java/kauailabs/navx",
         "@bazelrio//libraries/java/wpilib/new_commands",
         "@bazelrio//libraries/java/wpilib/wpilibj",
+        "@bazelrio//libraries/java/wpilib/wpimath",
         "@snobot_sim//jar",
     ],
 )
