Scra west coast drive (#211)
* west coast drive chassis

* tested chassis and inverted

* added stuff during the scra programming day

* Fix beta

* Auto-Update: Updating vendor deps

* Auto-Update: Ran standard vscode replacements

* Auto-Update: Ran our additional replacements

* Whoops

* Whoops

* Whoops

* Fix build

* Fix lint

Co-authored-by: Girls of Steel <girlsofsteelrobotics@gmail.com>
Co-authored-by: PJ Reiniger <pj.reiniger@gmail.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -49,5 +49,7 @@ include 'libraries:SwerveShuffleboard'
 //include 'y2022:MEPI'
 include 'y2022:RapidReact'
 include 'y2022:RapidReactDashboard'
+include 'y2022:SCRAWestCoastDrive'
+
 
 include 'y2023:Preseason'
