--- a/libraries/GirlsOfSteelLibCtre/build.gradle
+++ b/libraries/GirlsOfSteelLibCtre/build.gradle
@@ -3,6 +3,9 @@ plugins {
     id "edu.wpi.first.GradleRIO" version "2023.1.1"
 }
 
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
+
 dependencies {
     implementation wpi.java.deps.wpilib()
     implementation wpi.java.vendor.java()
