--- a/codelabs/basic_java/build.gradle
+++ b/codelabs/basic_java/build.gradle
@@ -3,6 +3,9 @@ plugins {
     id 'application'
 }
 
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
+
 apply plugin : "java"
 ext {
     javaMainClass = "com.gos.codelabs.basic_java.RunCalculator"
@@ -17,8 +20,9 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'junit:junit:4.12'
-    testRuntimeOnly("org.junit.vintage:junit-vintage-engine:5.2.0")
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
 
 test {
