--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,7 +29,7 @@ jobs:
         format: YYYY.MM.DD-HH
 
     - name: Build Everything
-      run: ./gradlew build publish -Pversion="${{ steps.current-time.outputs.formattedTime }}" -x :codelabs:basic_simulator:test
+      run: ./gradlew build publish -Pversion="${{ steps.current-time.outputs.formattedTime }}"
 
     - name: Create vendordep UUID
       id: generate-uuid
