--- a/y2023/ChargedUpDashboard/dashboard.yml
+++ b/y2023/ChargedUpDashboard/dashboard.yml
@@ -1,43 +1,65 @@
-
 base_package: com.gos.chargedup.shuffleboard
-plugin_summary: "Widgets for the Charged Up Robot"
-plugin_name: "Charged Up Robot"
+plugin_summary: Widgets for the Charged Up Robot
+plugin_name: ChargedUpRobot
 widgets:
+- table: SuperStructure
+  package_name: super_structure
+  widget_name: Charged Up Bot Super Structure Widget
+  sd_table_name_constant: SUPER_STRUCTURE_TABLE_NAME
+  children_tables:
   - table: SuperStructure
-    package_name: super_structure
-    widget_name: Charged Up Bot Super Structure Widget
-    sd_table_name_constant: SUPER_STRUCTURE_TABLE_NAME
-
-    children_tables:
-      - table: SuperStructure
-        table_name: SUPER_STRUCTURE
-        entries:
-          - type: double
-            name: armAngle
-            dasboard_constant: ARM_ANGLE
-            sim_incr: 2
-          - type: double
-              name: armSpeed
-              dasboard_constant: ARM_SPEED
-          - type: double
-              name: intakeAngle
-              dasboard_constant: INTAKE_ANGLE
-          - type: boolean
-              name: armExtension1
-              dasboard_constant: ARM_EXTENSION1
-          - type: boolean
-              name: armExtension2
-              dasboard_constant: ARM_EXTENSION2
-          - type: double
-              name: turretSpeed
-              dasboard_constant: TURRET_SPEED
-          - type: double
-              name: turretAngle
-              dasboard_constant: TURRET_ANGLE
-          - type: double
-              name: intakeSpeed
-              dasboard_constant: INTAKE_SPEED
-          - type: double
-              name: intakeRollerSpeed
-              dasboard_constant: INTAKE_ROLLER_SPEED
-
+    table_name: SUPER_STRUCTURE
+    entries:
+    - type: double
+      name: armAngle
+      dasboard_constant: ARM_ANGLE
+      sim_incr: 2
+    - type: double
+      name: armSpeed
+      dasboard_constant: ARM_SPEED
+    - type: double
+      name: intakeAngle
+      dasboard_constant: INTAKE_ANGLE
+    - type: boolean
+      name: armExtension1
+      dasboard_constant: ARM_EXTENSION1
+    - type: boolean
+      name: armExtension2
+      dasboard_constant: ARM_EXTENSION2
+    - type: double
+      name: turretSpeed
+      dasboard_constant: TURRET_SPEED
+    - type: double
+      name: turretAngle
+      dasboard_constant: TURRET_ANGLE
+    - type: double
+      name: intakeSpeed
+      dasboard_constant: INTAKE_SPEED
+    - type: double
+      name: intakeRollerSpeed
+      dasboard_constant: INTAKE_ROLLER_SPEED
+  shapes:
+  - type: Rectangle
+    name: chassis
+  - type: Rectangle
+    name: turret
+  - type: Rectangle
+    name: armBase
+  - type: Rectangle
+    name: arm1
+  - type: Rectangle
+    name: arm2
+  - type: Circle
+    name: armJoint
+  - type: Rectangle
+    name: claw
+  - type: Rectangle
+    name: basket
+  - type: Rectangle
+    name: hopper
+  - type: Rectangle
+    name: intake
+  - type: Circle
+    name: intakeRoller1
+  - type: Circle
+    name: intakeRoller2
