added dimensions in super structure controller

--- a/y2023/ChargedUpDashboard/dashboard.yml
+++ b/y2023/ChargedUpDashboard/dashboard.yml
@@ -50,11 +50,7 @@ widgets:
   - type: Rectangle
     name: armBase
   - type: Rectangle
-    name: arm1
-  - type: Rectangle
-    name: arm2
-  - type: Rectangle
-    name: arm3
+    name: arm
   - type: Circle
     name: armJoint
   - type: Rectangle
