--- a/settings.gradle
+++ b/settings.gradle
@@ -48,7 +48,7 @@ include 'libraries:GirlsOfSteelLibCtre'
 //include 'y2022:ChassisProject'
 //include 'y2022:MEPI'
 include 'y2022:RapidReact'
-include 'y2022:RapidReactDashboard'
+//include 'y2022:RapidReactDashboard'
 include 'y2022:SCRAWestCoastDrive'
 
 
