Widget2023 charged up (#240)
* completed gitflow codelab

* Update codelabs/gitflow/src/main/java/com/gos/codelabs/gitflow/subsystems/KatherineCodeLabe2022Part1Subsystem.java

Co-authored-by: PJ Reiniger <pj.reiniger@gmail.com>

* superclass - codelab, colors, shapes, sizes!

* superclass - codelab, colors, shapes, sizes!

* added dimensions in super structure controller

* added dimensions in super structure controller

* added dimensions in super structure controller

* added dimensions in super structure controller

* added dimensions in super structure controller

* shuffleboard commands

* tested shuffleboard commands

* fixed checkstyle errors in intake subsystem

* Remove codelabs stuff

* Delete another thing

* FIx checkstyle

---------

Co-authored-by: khuhub <katherine.y.hu@gmail.com>
Co-authored-by: khuhub <109600800+khuhub@users.noreply.github.com>
Co-authored-by: PJ Reiniger <pj.reiniger@gmail.com>
Co-authored-by: sienna-li <sieddy0116@gmail.com>
Co-authored-by: Girls of Steel <girlsofsteelrobotics@gmail.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -48,9 +48,10 @@ include 'libraries:GirlsOfSteelLibCtre'
 //include 'y2022:ChassisProject'
 //include 'y2022:MEPI'
 include 'y2022:RapidReact'
-include 'y2022:RapidReactDashboard'
+//include 'y2022:RapidReactDashboard'
 include 'y2022:SCRAWestCoastDrive'
 
 
 include 'y2023:Preseason'
 include 'y2023:ChargedUp'
+include 'y2023:ChargedUpDashboard'
