--- a/libraries/GirlsOfSteelLib/src/main/java/org/littletonrobotics/frc2023/util/BUILD.bazel
+++ b/libraries/GirlsOfSteelLib/src/main/java/org/littletonrobotics/frc2023/util/BUILD.bazel
@@ -4,4 +4,8 @@ gos_java_library(
     name = "mechanical_advantage",
     srcs = glob(["*.java"]),
     visibility = ["//visibility:public"],
+    deps = [
+        "@bazelrio//libraries/java/wpilib/wpilibj",
+        "@bazelrio//libraries/java/wpilib/wpiutil",
+    ],
 )
