Refactor Dashboard Generator

--- a/libraries/DashboardGenerator/lib/templates/shuffleboard/BUILD.bazel
+++ b/libraries/DashboardGenerator/lib/templates/shuffleboard/BUILD.bazel
@@ -1,5 +1,5 @@
 filegroup(
-    name = "templates",
+    name = "shuffleboard",
     srcs = glob(["**"]),
     visibility = ["//visibility:public"],
 )
