--- a/.github/workflows/shuffleboard_gen.yml
+++ b/.github/workflows/shuffleboard_gen.yml
@@ -19,16 +19,19 @@ jobs:
         run: pip3 install -r requirements.txt
 
       - name: Re-gen Codelab
-        run: python -m libraries.ShuffleboardGenerator.generate_dashboard --config_file=codelabs/custom_shuffleboard/dashboard.yml
+        run: python -m libraries.DashboardGenerator.generate_dashboard --config_file=codelabs/custom_shuffleboard/dashboard.yml
 
       - name: Re-gen 2020
-        run: python -m libraries.ShuffleboardGenerator.generate_dashboard --config_file=old_robots/y2020/2020InfiniteRechargeDashboard/dashboard.yml
+        run: python -m libraries.DashboardGenerator.generate_dashboard --config_file=old_robots/y2020/2020InfiniteRechargeDashboard/dashboard.yml
 
       - name: Re-gen 2021
-        run: python -m libraries.ShuffleboardGenerator.generate_dashboard --config_file=old_robots/y2021/OutreachBotDashboard/dashboard.yml
+        run: python -m libraries.DashboardGenerator.generate_dashboard --config_file=old_robots/y2021/OutreachBotDashboard/dashboard.yml
 
       - name: Re-gen 2022
-        run: python -m libraries.ShuffleboardGenerator.generate_dashboard --config_file=y2022/RapidReactDashboard/dashboard.yml
+        run: python -m libraries.DashboardGenerator.generate_dashboard --config_file=y2022/RapidReactDashboard/dashboard.yml
+
+      - name: Re-gen 2023
+        run: python -m libraries.DashboardGenerator.generate_dashboard --config_file=y2023/ChargedUpDashboard/dashboard.yml
 
       - name: Check output
         run: git --no-pager diff --exit-code HEAD
