--- a/y2023/ChargedUp/build.gradle
+++ b/y2023/ChargedUp/build.gradle
@@ -72,6 +72,7 @@ dependencies {
 
     implementation project(":libraries:GirlsOfSteelLib")
     implementation project(":libraries:GirlsOfSteelLibRev")
+    implementation project(":libraries:GirlsOfSteelLibCtre")
 }
 
 test {
