--- a/libraries/GirlsOfSteelLibCtre/src/main/java/com/gos/lib/ctre/BUILD.bazel
+++ b/libraries/GirlsOfSteelLibCtre/src/main/java/com/gos/lib/ctre/BUILD.bazel
@@ -5,6 +5,7 @@ gos_java_library(
     srcs = glob(["*.java"]),
     visibility = ["//visibility:public"],
     deps = [
+        "//libraries/GirlsOfSteelLib/src/main/java/org/littletonrobotics/frc2023/util:mechanical_advantage",
         "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/properties",
         "@bazelrio//libraries/java/ctre/phoenix",
     ],
