Hopefully fix gen

--- a/y2023/ChargedUpDashboard/dashboard.yml
+++ b/y2023/ChargedUpDashboard/dashboard.yml
@@ -71,3 +71,7 @@ widgets:
     name: turretTopDown
   - type: Rectangle
     name: turretTopDownGoal
+
+manual_widgets:
+- table: ScoringPosition
+  package_name: scoring_position
