--- a/libraries/GirlsOfSteelLib/build.gradle
+++ b/libraries/GirlsOfSteelLib/build.gradle
@@ -9,7 +9,15 @@ targetCompatibility = JavaVersion.VERSION_11
 dependencies {
     implementation wpi.java.deps.wpilib()
     implementation wpi.java.vendor.java()
+
+    nativeRelease wpi.java.deps.wpilibJniRelease(wpi.platforms.desktop)
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
+
+wpi.java.configureTestTasks(test)
 
 test {
     useJUnitPlatform()
@@ -18,3 +26,7 @@ test {
 
 ext.groupId = "com.gos.lib"
 apply from: "${rootDir}/build_scripts/gradle/publish_java.gradle"
+
+test {
+    finalizedBy jacocoTestReport
+}
