--- a/y2023/ChargedUp/src/main/.pathplanner/settings.json
+++ b/y2023/ChargedUp/src/main/.pathplanner/settings.json
@@ -1,7 +1,7 @@
 {
   "robotWidth": 0.7112,
   "robotLength": 0.762,
-  "holonomicMode": false,
+  "holonomicMode": true,
   "generateJSON": false,
   "generateCSV": false
 }
