--- a/settings.gradle
+++ b/settings.gradle
@@ -1,11 +1,11 @@
 rootProject.name = 'GirlsOfSteelRobotics'
 
-//include 'codelabs:basic_simulator'
-//include 'codelabs:custom_shuffleboard'
-//include 'codelabs:gitflow'
-//include 'codelabs:pid'
-//include 'codelabs:basic_java'
-//include 'codelabs:first_robot_code'
+include 'codelabs:basic_simulator'
+include 'codelabs:custom_shuffleboard'
+include 'codelabs:gitflow'
+include 'codelabs:pid'
+include 'codelabs:basic_java'
+include 'codelabs:first_robot_code'
 
 include 'libraries:GirlsOfSteelLib'
 include 'libraries:GirlsOfSteelLibRev'
