--- a/.github/workflows/bazel.yml
+++ b/.github/workflows/bazel.yml
@@ -19,6 +19,8 @@ jobs:
     runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v4
+        with: { python-version: '3.10.8' }
       - name: Build
         run: bazel test //... -k --config=remote --config=ci
 
