--- a/build_scripts/gradle/publish_java.gradle
+++ b/build_scripts/gradle/publish_java.gradle
@@ -7,12 +7,12 @@ task javadoc(type: Javadoc, overwrite: true) {
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
+    archiveClassifier = 'javadoc'
     from javadoc.destinationDir
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
+    archiveClassifier = 'sources'
     from sourceSets.main.allSource
 }
 
