--- a/old_robots/y2021/OutreachBotDashboard/BUILD.bazel
+++ b/old_robots/y2021/OutreachBotDashboard/BUILD.bazel
@@ -10,5 +10,6 @@ shuffleboard_widget(
 gos_java_binary(
     name = "Main",
     main_class = "com.gos.outreach.shuffleboard.super_structure.SuperStructureStandaloneMain",
+    tags = ["no-roborio"],
     runtime_deps = [":OutreachBotDashboard"],
 )
