--- a/libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/BUILD.bazel
+++ b/libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/BUILD.bazel
@@ -4,4 +4,7 @@ gos_java_library(
     name = "lib",
     srcs = glob(["*.java"]),
     visibility = ["//visibility:public"],
+    deps = [
+        "@bzlmodrio-allwpilib//libraries/java/wpilibj",
+    ],
 )
