--- a/y2022/MEPI/src/main/java/com/scra/mepi/rapid_react/subsystems/BUILD.bazel
+++ b/y2022/MEPI/src/main/java/com/scra/mepi/rapid_react/subsystems/BUILD.bazel
@@ -11,6 +11,8 @@ gos_java_library(
     visibility = ["//y2022/MEPI:__subpackages__"],
     deps = [
         "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/properties",
+        "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/properties/pid",
+        "//libraries/GirlsOfSteelLibRev/src/main/java/com/gos/lib/rev/properties/pid",
         "//libraries/GirlsOfSteelLibRev/src/main/java/com/gos/lib/rev",
         "//y2022/MEPI/src/main/java/com/scra/mepi/rapid_react:Constants",
         "//y2022/MEPI/src/main/java/com/scra/mepi/rapid_react:ShooterLookupTable",
