--- a/codelabs/pid/src/main/java/com/gos/codelabs/pid/subsystems/BUILD.bazel
+++ b/codelabs/pid/src/main/java/com/gos/codelabs/pid/subsystems/BUILD.bazel
@@ -8,7 +8,9 @@ gos_java_library(
         "//codelabs/pid/src/main/java/com/gos/codelabs/pid:Constants",
         "//codelabs/pid/src/main/java/com/gos/codelabs/pid:SmartDashboardNames",
         "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/properties",
+        "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/properties/pid",
         "//libraries/GirlsOfSteelLibRev/src/main/java/com/gos/lib/rev",
+        "//libraries/GirlsOfSteelLibRev/src/main/java/com/gos/lib/rev/properties/pid",
         "@bzlmodrio-allwpilib//libraries/java/ntcore",
         "@bzlmodrio-allwpilib//libraries/java/wpilibNewCommands",
         "@bzlmodrio-allwpilib//libraries/java/wpilibj",
