--- a/libraries/GirlsOfSteelLibRev/src/main/java/com/gos/lib/rev/alerts/BUILD.bazel
+++ b/libraries/GirlsOfSteelLibRev/src/main/java/com/gos/lib/rev/alerts/BUILD.bazel
@@ -1,12 +1,11 @@
 load("//build_scripts/bazel:java_rules.bzl", "gos_java_library")
 
 gos_java_library(
-    name = "checklists",
+    name = "alerts",
     srcs = glob(["*.java"]),
     visibility = ["//visibility:public"],
     deps = [
         "//libraries/GirlsOfSteelLib/src/main/java/org/littletonrobotics/frc2023/util:mechanical_advantage",
-        "@bzlmodrio-allwpilib//libraries/java/wpilibNewCommands",
-        "@bzlmodrio-allwpilib//libraries/java/wpilibj",
+        "@bzlmodrio-revlib//libraries/java/revlib-java",
     ],
 )
