--- a/libraries/GirlsOfSteelLibRev/src/main/java/com/gos/lib/rev/properties/pid/BUILD.bazel
+++ b/libraries/GirlsOfSteelLibRev/src/main/java/com/gos/lib/rev/properties/pid/BUILD.bazel
@@ -1,12 +1,11 @@
 load("//build_scripts/bazel:java_rules.bzl", "gos_java_library")
 
 gos_java_library(
-    name = "rev",
+    name = "pid",
     srcs = glob(["*.java"]),
     visibility = ["//visibility:public"],
     deps = [
-        "//libraries/GirlsOfSteelLib/src/main/java/org/littletonrobotics/frc2023/util:mechanical_advantage",
-        "@bzlmodrio-allwpilib//libraries/java/wpilibj",
+        "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/properties/pid",
         "@bzlmodrio-revlib//libraries/java/revlib-java",
     ],
 )
