--- a/libraries/GirlsOfSteelLibRev/build.gradle
+++ b/libraries/GirlsOfSteelLibRev/build.gradle
@@ -10,6 +10,10 @@ dependencies {
     implementation wpi.java.deps.wpilib()
     implementation wpi.java.vendor.java()
     implementation project(":libraries:GirlsOfSteelLib")
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
 
 test {
