[dashboard gen] Refactor dashboard generator

--- a/libraries/DashboardGenerator/lib/BUILD.bazel
+++ b/libraries/DashboardGenerator/lib/BUILD.bazel
@@ -8,5 +8,6 @@ gos_py_library(
     visibility = ["//visibility:public"],
     deps = [
         requirement("jinja2"),
+        requirement("pyyaml"),
     ],
 )
