--- a/y2023/ChargedUpDashboard/dashboard.yml
+++ b/y2023/ChargedUpDashboard/dashboard.yml
@@ -13,11 +13,11 @@ widgets:
     - type: double
       name: armAngle
       dasboard_constant: ARM_ANGLE
-      sim_incr: 2
+      sim_incr: '2'
     - type: double
       name: armGoalAngle
       dasboard_constant: ARM_GOAL_ANGLE
-      sim_incr: 2
+      sim_incr: '2'
     - type: double
       name: armSpeed
       dasboard_constant: ARM_SPEED
@@ -39,39 +39,92 @@ widgets:
     - type: double
       name: turretAngle
       dasboard_constant: TURRET_ANGLE
-      sim_incr: 2
+      sim_incr: '2'
     - type: double
       name: turretGoalAngle
       dasboard_constant: TURRET_GOAL_ANGLE
-      sim_incr: 2
+      sim_incr: '2'
     - type: double
       name: robotAngle
       dasboard_constant: ROBOT_ANGLE
-      sim_incr: 2
+      sim_incr: '2'
   shapes:
   - type: Rectangle
     name: chassis
+    x: '35'
+    y: MAX_HEIGHT - 6
+    color: palevioletred
+    height: '6'
+    width: '30'
   - type: Rectangle
     name: turret
+    x: '38.5'
+    y: MAX_HEIGHT - 9.5
+    color: palevioletred
+    height: '9.5'
+    width: '15.5'
   - type: Rectangle
     name: armBase
+    x: '45'
+    y: MAX_HEIGHT - 28
+    color: powderblue
+    height: '18.5'
+    width: '2'
   - type: Rectangle
     name: arm
+    x: ARM_BASE_X + 1
+    y: ARM_BASE_Y
+    color: pink
+    height: '15'
+    width: '1'
   - type: Rectangle
     name: armGoal
+    x: null
+    y: null
+    color: transparent
+    height: null
+    width: null
   - type: Circle
     name: armJoint
+    x: ARM_BASE_X + 1
+    y: ARM_BASE_Y
+    color: palevioletred
+    radius: '1'
   - type: Rectangle
     name: claw
+    x: ARM_X - 1
+    y: ARM_Y + 15
+    color: lightskyblue
+    height: '10'
+    width: '2'
   - type: Rectangle
     name: intake
+    x: CHASSIS_X + 30
+    y: CHASSIS_Y
+    color: plum
+    height: '15'
+    width: '6'
   - type: Rectangle
     name: chassisTopDown
+    x: '10'
+    y: '10'
+    color: coral
+    height: '20'
+    width: '14'
   - type: Rectangle
     name: turretTopDown
+    x: CHASSIS_TOP_DOWN_X + (CHASSIS_TOP_DOWN_WIDTH - TURRET_TOP_DOWN_WIDTH) / 2
+    y: CHASSIS_TOP_DOWN_Y + CHASSIS_TOP_DOWN_HEIGHT / 2 - TURRET_TOP_DOWN_HEIGHT
+    color: chartreuse
+    height: '15'
+    width: '3'
   - type: Rectangle
     name: turretTopDownGoal
-
+    x: null
+    y: null
+    color: transparent
+    height: null
+    width: null
 manual_widgets:
 - table: ScoringPosition
   package_name: scoring_position
