Use phoenix6 for pigeon

--- a/y2022/SCRAWestCoastDrive/build.gradle
+++ b/y2022/SCRAWestCoastDrive/build.gradle
@@ -72,7 +72,7 @@ dependencies {
 
 
     implementation project(":libraries:GirlsOfSteelLib")
-    implementation project(":libraries:GirlsOfSteelLibCtre")
+    implementation project(":libraries:GirlsOfSteelLibPhoenix6")
 }
 
 test {
