--- a/settings.gradle
+++ b/settings.gradle
@@ -9,7 +9,8 @@ include 'codelabs:first_robot_code'
 
 include 'libraries:GirlsOfSteelLib'
 include 'libraries:GirlsOfSteelLibRev'
-include 'libraries:GirlsOfSteelLibCtre'
+include 'libraries:GirlsOfSteelLibPhoenix5'
+include 'libraries:GirlsOfSteelLibPhoenix6'
 //include 'libraries:SwerveShuffleboard'
 
 //include 'old_robots:y2011:GOS2011:Drive'
@@ -56,3 +57,4 @@ include 'y2023:Preseason'
 include 'y2023:ChargedUp'
 include 'y2023:ChargedUpDashboard'
 include 'y2023:SwerveChassis'
+
