--- a/old_robots/y2022/ChassisProject/src/main/java/frc/robot/commands/BUILD.bazel
+++ b/old_robots/y2022/ChassisProject/src/main/java/frc/robot/commands/BUILD.bazel
@@ -3,9 +3,9 @@ load("//build_scripts/bazel:java_rules.bzl", "gos_java_library")
 gos_java_library(
     name = "commands",
     srcs = glob(["*.java"]),
-    visibility = ["//y2022/ChassisProject:__subpackages__"],
+    visibility = ["//old_robots/y2022/ChassisProject:__subpackages__"],
     deps = [
-        "//y2022/ChassisProject/src/main/java/frc/robot/subsystems",
+        "//old_robots/y2022/ChassisProject/src/main/java/frc/robot/subsystems",
         "@bzlmodrio-allwpilib//libraries/java/wpilibNewCommands",
         "@bzlmodrio-allwpilib//libraries/java/wpilibj",
     ],
