--- a/old_robots/y2022/ChassisProject/src/main/java/frc/robot/subsystems/BUILD.bazel
+++ b/old_robots/y2022/ChassisProject/src/main/java/frc/robot/subsystems/BUILD.bazel
@@ -3,7 +3,7 @@ load("//build_scripts/bazel:java_rules.bzl", "gos_java_library")
 gos_java_library(
     name = "subsystems",
     srcs = glob(["*.java"]),
-    visibility = ["//y2022/ChassisProject:__subpackages__"],
+    visibility = ["//old_robots/y2022/ChassisProject:__subpackages__"],
     deps = [
         "@bzlmodrio-allwpilib//libraries/java/wpilibNewCommands",
         "@bzlmodrio-allwpilib//libraries/java/wpilibj",
