--- a/old_robots/y2022/MEPI/src/main/java/com/scra/mepi/rapid_react/commands/BUILD.bazel
+++ b/old_robots/y2022/MEPI/src/main/java/com/scra/mepi/rapid_react/commands/BUILD.bazel
@@ -3,13 +3,13 @@ load("//build_scripts/bazel:java_rules.bzl", "gos_java_library")
 gos_java_library(
     name = "commands",
     srcs = glob(["*.java"]),
-    visibility = ["//y2022/MEPI:__subpackages__"],
+    visibility = ["//old_robots/y2022/MEPI:__subpackages__"],
     deps = [
         "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/properties",
         "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/properties/pid",
-        "//y2022/MEPI/src/main/java/com/scra/mepi/rapid_react:Constants",
-        "//y2022/MEPI/src/main/java/com/scra/mepi/rapid_react:ShooterLookupTable",
-        "//y2022/MEPI/src/main/java/com/scra/mepi/rapid_react/subsystems",
+        "//old_robots/y2022/MEPI/src/main/java/com/scra/mepi/rapid_react:Constants",
+        "//old_robots/y2022/MEPI/src/main/java/com/scra/mepi/rapid_react:ShooterLookupTable",
+        "//old_robots/y2022/MEPI/src/main/java/com/scra/mepi/rapid_react/subsystems",
         "@bzlmodrio-allwpilib//libraries/java/wpilibNewCommands",
         "@bzlmodrio-allwpilib//libraries/java/wpilibj",
         "@bzlmodrio-allwpilib//libraries/java/wpimath",
