--- a/old_robots/y2022/MEPI/src/main/java/com/scra/mepi/rapid_react/subsystems/BUILD.bazel
+++ b/old_robots/y2022/MEPI/src/main/java/com/scra/mepi/rapid_react/subsystems/BUILD.bazel
@@ -8,13 +8,13 @@ gos_java_library(
         ],
         exclude = ["LEDManagerSubsystem.java"],
     ),
-    visibility = ["//y2022/MEPI:__subpackages__"],
+    visibility = ["//old_robots/y2022/MEPI:__subpackages__"],
     deps = [
         "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/properties",
         "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/properties/pid",
         "//libraries/GirlsOfSteelLibRev/src/main/java/com/gos/lib/rev/properties/pid",
-        "//y2022/MEPI/src/main/java/com/scra/mepi/rapid_react:Constants",
-        "//y2022/MEPI/src/main/java/com/scra/mepi/rapid_react:ShooterLookupTable",
+        "//old_robots/y2022/MEPI/src/main/java/com/scra/mepi/rapid_react:Constants",
+        "//old_robots/y2022/MEPI/src/main/java/com/scra/mepi/rapid_react:ShooterLookupTable",
         "@bzlmodrio-allwpilib//libraries/java/ntcore",
         "@bzlmodrio-allwpilib//libraries/java/wpilibNewCommands",
         "@bzlmodrio-allwpilib//libraries/java/wpilibj",
