--- a/old_robots/y2022/RapidReact/src/main/java/com/gos/rapidreact/BUILD.bazel
+++ b/old_robots/y2022/RapidReact/src/main/java/com/gos/rapidreact/BUILD.bazel
@@ -3,7 +3,7 @@ load("//build_scripts/bazel:java_rules.bzl", "gos_java_library", "gos_java_robot
 gos_java_library(
     name = "Constants",
     srcs = ["Constants.java"],
-    visibility = ["//y2022/RapidReact:__subpackages__"],
+    visibility = ["//old_robots/y2022/RapidReact:__subpackages__"],
     deps = [
         "@bzlmodrio-allwpilib//libraries/java/wpimath",
     ],
@@ -16,16 +16,16 @@ gos_java_robot(
         exclude = ["Constants.java"],
     ),
     main_class = "com.gos.rapidreact.Main",
-    visibility = ["//y2022/RapidReact:__subpackages__"],
+    visibility = ["//old_robots/y2022/RapidReact:__subpackages__"],
     deps = [
         "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/properties",
-        "//y2022/RapidReact/src/main/java/com/gos/rapidreact/auto_modes",
-        "//y2022/RapidReact/src/main/java/com/gos/rapidreact/commands",
-        "//y2022/RapidReact/src/main/java/com/gos/rapidreact/commands/debug",
-        "//y2022/RapidReact/src/main/java/com/gos/rapidreact/commands/tuning",
-        "//y2022/RapidReact/src/main/java/com/gos/rapidreact/subsystems",
-        "//y2022/RapidReact/src/main/java/com/gos/rapidreact/subsystems:LEDManagerSubsystem",
-        "//y2022/RapidReact/src/main/java/com/gos/rapidreact/trajectory",
+        "//old_robots/y2022/RapidReact/src/main/java/com/gos/rapidreact/auto_modes",
+        "//old_robots/y2022/RapidReact/src/main/java/com/gos/rapidreact/commands",
+        "//old_robots/y2022/RapidReact/src/main/java/com/gos/rapidreact/commands/debug",
+        "//old_robots/y2022/RapidReact/src/main/java/com/gos/rapidreact/commands/tuning",
+        "//old_robots/y2022/RapidReact/src/main/java/com/gos/rapidreact/subsystems",
+        "//old_robots/y2022/RapidReact/src/main/java/com/gos/rapidreact/subsystems:LEDManagerSubsystem",
+        "//old_robots/y2022/RapidReact/src/main/java/com/gos/rapidreact/trajectory",
         "@bzlmodrio-allwpilib//libraries/java/ntcore",
         "@bzlmodrio-allwpilib//libraries/java/wpilibNewCommands",
         "@bzlmodrio-allwpilib//libraries/java/wpilibj",
