--- a/old_robots/y2022/RapidReact/src/main/java/com/gos/rapidreact/auto_modes/BUILD.bazel
+++ b/old_robots/y2022/RapidReact/src/main/java/com/gos/rapidreact/auto_modes/BUILD.bazel
@@ -3,13 +3,13 @@ load("//build_scripts/bazel:java_rules.bzl", "gos_java_library")
 gos_java_library(
     name = "auto_modes",
     srcs = glob(["*.java"]),
-    visibility = ["//y2022/RapidReact:__subpackages__"],
+    visibility = ["//old_robots/y2022/RapidReact:__subpackages__"],
     deps = [
-        "//y2022/RapidReact/src/main/java/com/gos/rapidreact:Constants",
-        "//y2022/RapidReact/src/main/java/com/gos/rapidreact/commands",
-        "//y2022/RapidReact/src/main/java/com/gos/rapidreact/commands/autonomous",
-        "//y2022/RapidReact/src/main/java/com/gos/rapidreact/subsystems",
-        "//y2022/RapidReact/src/main/java/com/gos/rapidreact/trajectory",
+        "//old_robots/y2022/RapidReact/src/main/java/com/gos/rapidreact:Constants",
+        "//old_robots/y2022/RapidReact/src/main/java/com/gos/rapidreact/commands",
+        "//old_robots/y2022/RapidReact/src/main/java/com/gos/rapidreact/commands/autonomous",
+        "//old_robots/y2022/RapidReact/src/main/java/com/gos/rapidreact/subsystems",
+        "//old_robots/y2022/RapidReact/src/main/java/com/gos/rapidreact/trajectory",
         "@bzlmodrio-allwpilib//libraries/java/wpilibNewCommands",
         "@bzlmodrio-allwpilib//libraries/java/wpilibj",
         "@bzlmodrio-allwpilib//libraries/java/wpimath",
