--- a/old_robots/y2022/RapidReact/src/main/java/com/gos/rapidreact/commands/BUILD.bazel
+++ b/old_robots/y2022/RapidReact/src/main/java/com/gos/rapidreact/commands/BUILD.bazel
@@ -3,10 +3,10 @@ load("//build_scripts/bazel:java_rules.bzl", "gos_java_library")
 gos_java_library(
     name = "commands",
     srcs = glob(["*.java"]),
-    visibility = ["//y2022/RapidReact:__subpackages__"],
+    visibility = ["//old_robots/y2022/RapidReact:__subpackages__"],
     deps = [
         "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/properties",
-        "//y2022/RapidReact/src/main/java/com/gos/rapidreact/subsystems",
+        "//old_robots/y2022/RapidReact/src/main/java/com/gos/rapidreact/subsystems",
         "@bzlmodrio-allwpilib//libraries/java/wpilibNewCommands",
         "@bzlmodrio-allwpilib//libraries/java/wpilibj",
         "@bzlmodrio-allwpilib//libraries/java/wpimath",
