--- a/old_robots/y2022/RapidReact/src/main/java/com/gos/rapidreact/commands/debug/BUILD.bazel
+++ b/old_robots/y2022/RapidReact/src/main/java/com/gos/rapidreact/commands/debug/BUILD.bazel
@@ -3,9 +3,9 @@ load("//build_scripts/bazel:java_rules.bzl", "gos_java_library")
 gos_java_library(
     name = "debug",
     srcs = glob(["*.java"]),
-    visibility = ["//y2022/RapidReact:__subpackages__"],
+    visibility = ["//old_robots/y2022/RapidReact:__subpackages__"],
     deps = [
-        "//y2022/RapidReact/src/main/java/com/gos/rapidreact/subsystems",
+        "//old_robots/y2022/RapidReact/src/main/java/com/gos/rapidreact/subsystems",
         "@bzlmodrio-allwpilib//libraries/java/wpilibNewCommands",
     ],
 )
