--- a/old_robots/y2022/RapidReact/src/main/java/com/gos/rapidreact/subsystems/BUILD.bazel
+++ b/old_robots/y2022/RapidReact/src/main/java/com/gos/rapidreact/subsystems/BUILD.bazel
@@ -10,14 +10,14 @@ gos_java_library(
         ],
         exclude = ["LEDManagerSubsystem.java"],
     ),
-    visibility = ["//y2022/RapidReact:__subpackages__"],
+    visibility = ["//old_robots/y2022/RapidReact:__subpackages__"],
     deps = [
         "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib",
         "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/properties",
         "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/properties/pid",
         "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/sensors",
         "//libraries/GirlsOfSteelLibRev/src/main/java/com/gos/lib/rev/properties/pid",
-        "//y2022/RapidReact/src/main/java/com/gos/rapidreact:Constants",
+        "//old_robots/y2022/RapidReact/src/main/java/com/gos/rapidreact:Constants",
         "@bzlmodrio-allwpilib//libraries/java/ntcore",
         "@bzlmodrio-allwpilib//libraries/java/wpilibNewCommands",
         "@bzlmodrio-allwpilib//libraries/java/wpilibj",
@@ -33,13 +33,13 @@ gos_java_library(
 gos_java_library(
     name = "LEDManagerSubsystem",
     srcs = ["LEDManagerSubsystem.java"],
-    visibility = ["//y2022/RapidReact:__subpackages__"],
+    visibility = ["//old_robots/y2022/RapidReact:__subpackages__"],
     deps = [
         ":subsystems",
         "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/led",
         "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/led/mirrored",
-        "//y2022/RapidReact/src/main/java/com/gos/rapidreact:Constants",
-        "//y2022/RapidReact/src/main/java/com/gos/rapidreact/auto_modes",
+        "//old_robots/y2022/RapidReact/src/main/java/com/gos/rapidreact:Constants",
+        "//old_robots/y2022/RapidReact/src/main/java/com/gos/rapidreact/auto_modes",
         "@bzlmodrio-allwpilib//libraries/java/wpilibNewCommands",
         "@bzlmodrio-allwpilib//libraries/java/wpilibj",
     ],
