--- a/.github/workflows/bazel.yml
+++ b/.github/workflows/bazel.yml
@@ -13,14 +13,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # TODO(PJ) Mac seems flakey on github. Turning it off for now
-        # platform: [ubuntu-latest, macos-latest, windows-latest]
-        platform: [ubuntu-latest, windows-latest]
+        platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v4
         with: { python-version: '3.10.8' }
+      - name: Build allowing failure # TODO(PJ) Mac seems flakey on github. Turning it off for now
+        run: bazel test //... -k --config=remote --config=ci || true
       - name: Build
         run: bazel test //... -k --config=remote --config=ci
 
